fixing fetching mint collection details for erc721